<resources>
    <string name="app_name">Imran_Mamirov_hw_3_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_a_subject">Enter a subject</string>
    <string name="text">Text</string>
    <string name="theme">Theme</string>
    <string name="send_text">Send</string>
    <string name="intents">Intents</string>
</resources>